agregada la cronica

--- a/index.html
+++ b/index.html
@@ -241,6 +241,12 @@
           var capital = "Periodicos Capital e Indigos"
           document.getElementById("caja").innerHTML = capital.link("https://script.google.com/macros/s/AKfycbzzQ8V2LfohYLRw62s-A_u1zTyM6Ywqbp_9zqDj8cV94RFYuGQH/exec");
         }
+        // ********************************************************************
+        function cronica()
+        {
+          var capital = "Periodico La Cronica"
+          document.getElementById("caja").innerHTML = capital.link("http://www.cronica.com.mx/impreso/files/publication.pdf");
+        }
 
 
 
